Fixed links but messed up alignment elsewhere

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,21 +5,25 @@ body {
 a {
     text-decoration: none;
 }
+
 ul {
     list-style: none;
 }
+
 .header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     background-color: #ff4800e0;
-    background-image: linear-gradient(to right, #ff4800e0, #0f2d57);
+    background-image: linear-gradient(to top right, #ff4800e0, #0f2d57);
     border-radius: 31%;
+    margin: 6px auto;
 }
 
 .header h1 {
     font-size: 50px;
     color: #0f2d57;
     padding: 20px;
+    text-shadow: 1px 1px 2px black, 0 0 25px lightskyblue;
 
 }
 /* Not yet sure if I really need this */
@@ -35,6 +39,9 @@ ul {
     font-size: 24px;
     padding: 40px;
     text-decoration: none;
+}
+a:hover {
+    text-decoration-color: fuchsia;
 }
 
 /* colorizing the links and paths */
@@ -53,8 +60,8 @@ ul {
  
 /* What a view! */
 .hero {
-    display: flex;
     margin: 0;
+    display: flex;
     width: 100%;
     height: 450px;
     background-image: url("../../assets/images/IMG_2816.jpeg");
@@ -62,17 +69,26 @@ ul {
     background-position: center;
     flex-flow: row-reverse;
     align-items: flex-end;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    }
+
+.hero h2 {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 45px;
+    color: #ff4800e0;
+    background-color: #0f2d57;  
 
 }
 
 .bio, .work, .contact {
     display: flex;
     justify-content: space-between;
-    margin: 6px auto;
+    margin: 10px;
 }
 
 .header-bio, .header-work, .header-contact {
+    display: flex;
+    /* justify-content: flex-end; */
+    /* flex-direction: row-reverse; */
     font-size: 40px;
     width: 20%;
     text-align: right;
@@ -110,11 +126,22 @@ ul {
 
 }
 
+ #pink #floyd {
+    background-image: url("../images/pink-floyd-prism.jpeg");
+    background-size: cover;
+}
+
 .contact ul {
     display: flex;
-    flex-flow: row;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
     padding: 40px;
     font-size: 26px;
 
+}
+#footer {
+    background-image: linear-gradient(to bottom left, #ff4800e0, #0f2d57);
+    width: 100%;
+    height: 30px;
 }
